@@ -10,7 +10,7 @@ binmode(STDOUT, ':utf8');
 binmode(STDERR, ':utf8');
 # We must declare in advance how many tests we are going to perform.
 # There are currently three tests per tagset driver.
-use Test::More tests => 38*3;
+use Test::More tests => 39*3;
 use Lingua::Interset qw(get_driver_object);
 use Lingua::Interset::Tagset;
 
@@ -40,6 +40,7 @@ my @tagsets =
     'ja::conll', 'ja::ipadic',
     'la::conll',
     'mul::google', 'mul::upos',
+    'nl::conll',
     'pt::cintil',
     'sv::mamba', 'sv::conll', 'sv::parole', 'sv::suc'
 );
